--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,92 +5,50 @@ on:
   workflow_dispatch:
 
 jobs:
-  # unit_and_widget_test:
-  #   runs-on: macos-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: subosito/flutter-action@v1
-  #       with:
-  #         flutter-version: '2.2.0'
-  #         channel: 'stable'
-  #     - run: flutter pub get
-  #     - run: flutter test
+  unit_and_widget_test:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - run: flutter pub get
+      - run: flutter test
   
-  # integration_test_iOS:
-  #   runs-on: macos-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: futureware-tech/simulator-action@v1
-  #       with: 
-  #         model: 'iPhone 8'
-  #     - uses: subosito/flutter-action@v1
-  #       with:
-  #         flutter-version: '2.2.0'
-  #         channel: 'stable'
-  #     - name: "Run Flutter Integration tests"
-  #       run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart"
+  integration_test_iOS:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: futureware-tech/simulator-action@v1
+        with: 
+          model: 'iPhone 8'
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - name: "Run Flutter Integration tests"
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart"
 
-  # integration_test_Android:
-  #   runs-on: macos-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: subosito/flutter-action@v1
-  #       with:
-  #         flutter-version: '2.2.0'
-  #         channel: 'stable'
-  #     - name: boot Android Emulator And Run Flutter Integration tests
-  #       uses: reactivecircus/android-emulator-runner@v2
-  #       with:
-  #         api-level: 29
-  #         script: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart"
+  integration_test_Android:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - name: boot Android Emulator And Run Flutter Integration tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart"
 
-  # integration_test_web_mac:
-  #   runs-on: macos-latest
-  #   strategy:
-  #     matrix:
-  #       browser: [chrome, safari]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: subosito/flutter-action@v1
-  #       with:
-  #         flutter-version: '2.2.0'
-  #         channel: 'stable'
-  #     - run: flutter config --enable-web
-  #     - name: boot chromedriver
-  #       if: matrix.browser == 'chrome'
-  #       run: chromedriver --port=4444 &
-  #     - name: boot safaridriver
-  #       if: matrix.browser == 'safari'
-  #       run: safaridriver --port=4444 &
-  #     - run: sleep 5
-  #     - name: Run Flutter Integration tests
-  #       run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
-
-  # integration_test_web_win:
-  #   runs-on: windows-latest
-  #   strategy:
-  #     matrix:
-  #       browser: [firefox]
-  #       # browser: [firefox, edge]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: subosito/flutter-action@v1
-  #       with:
-  #         flutter-version: '2.2.0'
-  #         channel: 'stable'
-  #     - run: flutter config --enable-web
-  #     - name: boot msedgedriver
-  #       if: matrix.browser == 'edge'
-  #       run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
-  #     - name: boot geckodriver
-  #       if: matrix.browser == 'firefox'
-  #       run: Start-Process -FilePath geckodriver -ArgumentList "--port=4444"
-  #     - run: sleep 5
-  #     - name: Run Flutter Integration tests
-  #       run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
-
-  integration_test_edge_win:    
-    runs-on: windows-latest
+  integration_test_web_mac:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        browser: [chrome, safari]
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
@@ -98,22 +56,35 @@ jobs:
           flutter-version: '2.2.0'
           channel: 'stable'
       - run: flutter config --enable-web
-      - run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
+      - name: boot chromedriver
+        if: matrix.browser == 'chrome'
+        run: chromedriver --port=4444 &
+      - name: boot safaridriver
+        if: matrix.browser == 'safari'
+        run: safaridriver --port=4444 &
       - run: sleep 5
-      - name: Download
-        run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-      - name: Extract
-        run: Expand-Archive ngrok.zip
-      - name: Auth
-        run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-        env:
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-      - name: Enable TS
-        run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-      - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-      - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-      - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
-      - name: Create Tunnel
-        run: .\ngrok\ngrok.exe tcp 3389
-      # - name: Run Flutter Integration tests
-      #   run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
+      - name: Run Flutter Integration tests
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
+
+  integration_test_web_win:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        browser: [firefox]
+        # browser: [firefox, edge]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.0'
+          channel: 'stable'
+      - run: flutter config --enable-web
+      - name: boot msedgedriver
+        if: matrix.browser == 'edge'
+        run: Start-Process -FilePath msedgedriver -ArgumentList "--port=4444"
+      - name: boot geckodriver
+        if: matrix.browser == 'firefox'
+        run: Start-Process -FilePath geckodriver -ArgumentList "--port=4444"
+      - run: sleep 5
+      - name: Run Flutter Integration tests
+        run: "flutter drive --driver=test_driver/integration_test.dart --target=integration_test/app_test.dart -d web-server --profile --browser-name=${{ matrix.browser }}"
